infra/k8s/overlays/dev/ingress-hosts-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-ingress-frontend
spec:
  tls:
    - hosts:
        - dq-made-easy.jac.dot
      secretName: dq-dev-tls-cert
  rules:
    - host: dq-made-easy.jac.dot
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-ingress-keycloak
spec:
  tls:
    - hosts:
        - keycloak.jac.dot
      secretName: dq-dev-keycloak-tls-cert
  rules:
    - host: keycloak.jac.dot
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-ingress-openmetadata
spec:
  tls:
    - hosts:
        - openmetadata.jac.dot
      secretName: dq-dev-openmetadata-tls-cert
  rules:
    - host: openmetadata.jac.dot
